# auto-research

./: .env.example  .gitignore  .gitmodules  AGENTS.md  INSTRUCTIONS.md  README.md  learnings.md  pipeline.json  pyproject.toml  skills-lock.json
.claude/: settings.json
.claude/agents/: analyzer.json  analyzer.md  critic.json  critic.md  extractor.json  extractor.md  formatter.json  formatter.md  ingestor.json  ingestor.md  orchestrator.json  orchestrator.md  researcher.json  researcher.md  synthesizer.json  synthesizer.md
.claude/hooks/: PostToolUse.py  PreToolUse.py  activate_caveman.py  hcom_hook.py
.claude/rules/: python.md
.docs/: README.md
agents/: README.md
evals/: README.md  eval_pipeline.py
gates/: README.md  __init__.py  _compat.py  implementation_gates.py  input_gates.py  memory_promotion_gates.py  output_gates.py  plan_gates.py  release_gates.py  security_gates.py  test_gates.py
observability/: README.md  aggregate_metrics.jsonl  audit-log-schema.md  audit-log.schema.json  failure-taxonomy.md
schemas/: 00_research.json  01_ingest.json  02_extract.json  03_analyze.json  04_synthesize.json  05_format.json  agent-spec.json  manifest.json  skill-spec.json
scripts/: _bootstrap.py  attach_tui.py  attach_tui.sh  batch_run.py  batch_run.sh  kickoff.py  kickoff.sh  launch.py  launch.sh  run_pipeline.py  run_pipeline.sh  smoke_v2.py  smoke_validator.py  status.py  status.sh  validate_specs.py
tools/: __init__.py  _compat.py  artifact_io.py  fetch_input.py  hcom_io.py  manifest.py  memory_retriever.py  spec_io.py  trace.py  validator.py
(+511 files in other folders)
