[project]
name = "research-pipeline"
version = "1.0.0"
description = "7-agent content-research pipeline. Input: any content. Output: structured folder of versioned artifacts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.23.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "html2text>=2024.2.26",
    "requests>=2.32.0",
]
