[project]
name = "research-pipeline"
version = "1.0.0"
description = "7-agent content-research pipeline. Input: any content. Output: structured folder of versioned artifacts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.23.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "html2text>=2024.2.26",
    "requests>=2.32.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

